<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="Welcome to your weather!"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="35dp"
            android:gravity="center"
            android:layout_margin="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_below="@id/task"
            android:hint="Username"
            android:layout_margin="10dp"
            android:padding="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/username"
            android:hint="Password"
            android:layout_margin="10dp"
            android:padding="20dp"/>


        <CheckBox
            android:id="@+id/darkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dark Theme" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/signin"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Sign In"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/signup"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sign Up"
                android:gravity="center"
                />
        </LinearLayout>





    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>