...

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="39dp"-->
...
        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="156dp" />

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />

        <Button
            android:id="@+id/buttonRemoveLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remove a location" />
...
