...
        android:layout_alignParentRight="true"
        android:layout_marginRight="100dp"
        android:layout_weight="1"
        android:text="Show Weather" />

    <Button
        android:id="@+id/mBtnMap"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:text="Show Map" />
</RelativeLayout>
